💄 update styles to reflect new App structure

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,4 +1,4 @@
-$background-color: #F5A962;
+$background-color: #DDDDDD;
 
 body {
   background-color: $background-color;
@@ -6,5 +6,9 @@ body {
 
 .App {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
 }
