--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -4,7 +4,7 @@ body {
   background-color: $background-color;
 }
 
-.App {
+.appComponents {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
